--- a/releases/istioctl.yaml
+++ b/releases/istioctl.yaml
@@ -4,9 +4,9 @@ metadata:
   name: istioctl
   web: https://istio.io/
 spec:
-  url: https://github.com/istio/istio/releases/download/{{ release }}/
+  url: https://github.com/istio/istio/releases/download/{{ .Version }}
   file:
-    name: istioctl-{{ release }}-{{ os }}-{{ arch }}.tar.gz
+    name: istioctl-{{ .Version }}-{{ .Os }}-{{ .Arch }}.tar.gz
     binaryPath: istioctl
     type:
       - os: linux
@@ -16,6 +16,6 @@ spec:
       - os: windows
         arch: amd64
   checksum:
-    url: https://github.com/istio/istio/releases/download/{{ release }}/
-    file: istioctl-{{ release }}-{{ os }}-{{ arch }}.tar.gz.sha256
+    url: https://github.com/istio/istio/releases/download/{{ .Version }}
+    file: istioctl-{{ .Version }}-{{ .Os }}-{{ .Arch }}.tar.gz.sha256
     format: sha256
