--- a/releases/terraform.yaml
+++ b/releases/terraform.yaml
@@ -6,8 +6,9 @@ metadata:
 spec:
   url: https://releases.hashicorp.com/terraform/{{ .Version }}
   file:
-    name: terraform_{{ .Version }}_{{ .Os }}_{{ .Arch }}.zip
-    binaryPath: terraform
+    archive: terraform_{{ .Version }}_{{ .Os }}_{{ .Arch }}.zip
+    binaryPath: "."
+    binary: terraform
   checksum:
     url: https://releases.hashicorp.com/terraform/{{ .Version }}
     file: terraform_{{ .Version }}_SHA256SUMS
