start to add myself

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,26 +41,26 @@ jobs:
             ri-darwin-amd64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Docker hub
-      #   uses: docker/build-push-action@v1
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
-      #     repository: golgoth31/ri
-      #     tags: amd64
-      #     push: ${{ startsWith(github.ref, 'refs/tags/') }}
-      #     dockerfile: build/amd64.dockerfile
-      #     add_git_labels: true
-      # - name: Docker hub
-      #   uses: docker/build-push-action@v1
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
-      #     repository: golgoth31/ri
-      #     tags: arm64
-      #     push: ${{ startsWith(github.ref, 'refs/tags/') }}
-      #     dockerfile: build/arm64.dockerfile
-      #     add_git_labels: true
+      - name: Docker hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: golgoth31/ri
+          tags: amd64
+          push: ${{ startsWith(github.ref, 'refs/tags/') }}
+          dockerfile: build/amd64.dockerfile
+          add_git_labels: true
+      - name: Docker hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: golgoth31/ri
+          tags: arm64
+          push: ${{ startsWith(github.ref, 'refs/tags/') }}
+          dockerfile: build/arm64.dockerfile
+          add_git_labels: true
       - name: Multiarch
         run: |
           curl -Lo manifest-tool https://github.com/estesp/manifest-tool/releases/download/v1.0.2/manifest-tool-linux-amd64
