--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,10 +8,13 @@ jobs:
     name: Build and release
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.14
+      - name: Archive definitions
+        run: |
+          tar czvf ri-releases-definitions.tar.gz releases
+      - name: Set up Go 1.15
         uses: actions/setup-go@v2
         with:
-          go-version: 1.14
+          go-version: 1.15
         id: go
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
