--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,6 @@ jobs:
     name: Build and release
     runs-on: ubuntu-latest
     steps:
-      - name: Archive definitions
-        run: |
-          tar czvf ri-releases-definitions.tar.gz releases
       - name: Set up Go 1.15
         uses: actions/setup-go@v2
         with:
@@ -33,6 +30,9 @@ jobs:
         run: make artifact_linux_armv7
       - name: Build-darwin-amd64
         run: make artifact_darwin_amd64
+      - name: Archive definitions
+        run: |
+          tar czvf ri-releases-definitions.tar.gz releases
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -42,6 +42,7 @@ jobs:
             ri-linux-arm64
             ri-linux-armv7
             ri-darwin-amd64
+            ri-releases-definitions.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Docker hub
